[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/UnlockPanel.gd" id="1"]

[node name="UnlockPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "üîì Desbloqueos Progresivos"
horizontal_alignment = 1

[node name="PhaseIndicator" type="Label" parent="PanelContainer/VBoxContainer/Header"]
layout_mode = 2
text = "üå± Fase Inicial"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer/Header"]
layout_mode = 2
text = "‚ùå"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Disponibles" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="AvailableHeader" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Disponibles"]
layout_mode = 2
text = "üìã Pr√≥ximas Caracter√≠sticas Disponibles"
horizontal_alignment = 1

[node name="AvailableScroll" type="ScrollContainer" parent="PanelContainer/VBoxContainer/TabContainer/Disponibles"]
layout_mode = 2
size_flags_vertical = 3

[node name="AvailableContent" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Disponibles/AvailableScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Desbloqueadas" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="UnlockedHeader" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Desbloqueadas"]
layout_mode = 2
text = "‚úÖ Caracter√≠sticas Desbloqueadas"
horizontal_alignment = 1

[node name="UnlockedScroll" type="ScrollContainer" parent="PanelContainer/VBoxContainer/TabContainer/Desbloqueadas"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnlockedContent" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Desbloqueadas/UnlockedScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Footer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="PanelContainer/VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3
text = "üí° Juega para desbloquear nuevas caracter√≠sticas autom√°ticamente"
horizontal_alignment = 1
